email template change

--- a/assets/sections/emailfoot.html
+++ b/assets/sections/emailfoot.html
@@ -1,6 +1,5 @@
 	 
-  </callout>
-      <spacer size="16"></spacer>
+  		</callout>      
     </columns>
   </row>
 	<spacer size="16"></spacer>
@@ -11,18 +10,15 @@
     <spacer size="16"></spacer>
 
     <row>
-      <columns large="6">
+      <columns>
               <a href="http://144.217.29.87/" class="logo "><img src="http://144.217.29.87/dist/style_assets/logo.png" /></a>        
       </columns>
-      <columns large="6"> 
-      	<br />       
-        <right><a href="mailto:unsubscribe@gopage.com" class="yellow-link">Unsubscribe</a></right>
-      </columns>      
+            
     </row>
     </p>
     <p class="copyright">
     <row>
-    	<columns large="6">
+    	<columns>
     	  Copyright © 2014-2018 - GoPage Corporation. All Rights Reserved.
        </columns>   
     </row> 
